HDPI-772 - Small response to Scott's feedback